<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorOnBackground"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_name" />

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="5sp"
            android:paddingRight="5sp"
            android:paddingBottom="5sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    tools:ignore="NestedWeights">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/support"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="5sp"
                        android:layout_marginBottom="5sp"
                        app:cardCornerRadius="15sp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="?background"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/ic_support"
                                app:tint="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/support"
                                android:textColor="@color/white"
                                android:textSize="@dimen/card_text_size"
                                android:textStyle="bold|italic" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/about_us"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="5sp"
                        android:layout_marginBottom="5sp"
                        app:cardCornerRadius="15sp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="?background"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/ic_about_us"
                                app:tint="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/about_us"
                                android:textColor="@color/white"
                                android:textSize="@dimen/card_text_size"
                                android:textStyle="bold|italic" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    tools:ignore="NestedWeights">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/web_site"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5sp"
                        app:cardCornerRadius="15sp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="?background"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:src="@drawable/ic_website"
                                app:tint="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/web_site"
                                android:textColor="@color/white"
                                android:textSize="24sp"
                                android:textStyle="bold|italic" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <LinearLayout
                    android:id="@+id/d"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    tools:ignore="NestedWeights">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/share_app"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5sp"
                        app:cardCornerRadius="@dimen/card_corner_radius">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="?background"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/ic_share"
                                app:tint="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/share_app"
                                android:textColor="@color/white"
                                android:textSize="@dimen/card_text_size"
                                android:textStyle="bold|italic" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/c"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/rate_app"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5sp"
                        app:cardCornerRadius="@dimen/card_corner_radius">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="?background"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="120dp"
                                android:layout_height="80dp"
                                android:src="@drawable/ic_rate"
                                app:tint="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/rate_app"
                                android:textColor="@color/white"
                                android:textSize="@dimen/card_text_size"
                                android:textStyle="bold|italic" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/social"
                android:layout_width="match_parent"
                android:layout_height="@dimen/social_size"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/social_margin_horizontal"
                    android:layout_weight="1"
                    android:padding="@dimen/social_padding">

                    <ImageView
                        android:id="@+id/facebook"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_facebook"
                        app:tint="?tickColor" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/social_margin_horizontal"
                    android:layout_weight="1"
                    android:padding="@dimen/social_padding">

                    <ImageView
                        android:id="@+id/instagram"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_instagram"
                        app:tint="?tickColor" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/social_margin_horizontal"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/twitter"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_twitter"
                        app:tint="?tickColor" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>